--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "africastalking": "^0.6.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "lucide-react": "^0.365.0",
     "mongoose": "^8.3.0",
     "next": "14.1.4",
