--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "lucide-react": "^0.365.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.3.0",
     "next": "14.1.4",
     "nodemailer": "^6.9.13",
