--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-table": "^8.15.3",
     "@types/nodemailer": "^6.4.14",
     "africastalking": "^0.6.6",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "jspdf": "^2.5.1",
@@ -25,6 +26,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.3.0",
     "next": "14.1.4",
+    "next-auth": "^4.24.7",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
@@ -38,6 +40,7 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.2",
     "@testing-library/user-event": "^14.5.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
