--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/nodemailer": "^6.4.14",
     "africastalking": "^0.6.6",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "jspdf": "^2.5.1",
@@ -29,6 +30,7 @@
     "next-auth": "^4.24.7",
     "nodemailer": "^6.9.13",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
     "tailwind-merge": "^2.2.2",
